	    <authority>            [user[:password]@]host[:port]

	Bei der herkömmlichen Aufrufart können in ähnlicher Weise Port,
	Benutzer und Passwort in einem Argument angegeben werden. Diese
	Angaben überschreiben eventuell vorhandene Optionen (--port etc.).

	    getmsg [OPTION]... <authority> <part-url-template> [<message>]...
	    getmsg [OPTION]... -t <part-url-template> <authority> [<message>]...

2006-05-14:

	callmonitor-1.2 veröffentlicht

2006-05-25:

	* messages.sh: XBOX_CAPTION und DREAM_CAPTION vernünftig kodieren (URL
	+ printf)

2006-06-02:

	* callmonitor.sh: for_leases funktionierte nicht, weil IFS einen
	falschen Wert hatte (Dank an SeeDyX)

2006-06-03:

	callmonitor-1.3 veröffentlicht

2006-06-24:

	* reverse.sh: Rückwärtssuche alternativ bei wer-ist-dran.de oder
	inverssuche.de (auf Konfigurationsseite auswählbar); bitte testen, ob
	es bei irgendwelchen Nummern Fehler bei der Auflösung oder in der
	Darstellung gibt!
	* reverse.sh: Bei Verbindungsproblemen wurde fälschlicherweise das
	leere Ergebnis gecachet (Dank an jesus.christ)

	callmonitor-1.4 veröffentlicht

2006-06-25:

	* callmonitor: Neues Feld PROVIDER ("SIP0" etc. oder leer) wird
	ausgewertet; wird zur Ermittlung eines passenden Namens für das lokale
	Ende einer Verbindung benutzt. 
	
	Gematcht wird (in den Listeners) weiterhin (seit Firmware .04.06) die
	MSN des Accounts, nicht SIP0 etc. (Namen werden gecachet; nach
	Änderungen der Einträge "username@registrar" im Telefonbuch muss der
	Callmonitor neugestartet werden, damit die Einträge wirksam werden).

2006-06-30:

	* messages.sh: relookmessage für DGStation Relook 400S (Geckow Web
	Interface); Anzeigedauer über RELOOK_TIMEOUT. Es wird leider nur eine
	kurze Zeile ohne Umlaute unterstützt. Vielen Dank an bolle fürs
	Testen.

	* if_jfritz.sh: CallMonitor-Schnittstelle wird nun automatisch
	aktiviert.

	* dial.sh: hangup-Funktion hinzugefügt (zum Abbrechen von
	Anwahlversuchen)